🙈 update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
 env
 .env
 .vscode
-test-source/testing
+test-source/testing/
 main/__pycache__
 main/responses/
 main/imgs/
 main/.env
 .gpt-key
-main/source
-main/gecko
-comapre/coco/annotations
-comapre/coco/images
-compare/coco/images
-comapre/coco/code/__pycache__
+main/source/
+main/gecko/
+comapre/coco/annotations/
+comapre/coco/images/
+comapre/coco/code/__pycache__/
