--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,11 @@ main/imgs/
 main/.env
 .gpt-key
 main/source/
-main/gecko/
+# main/gecko/
 comapre/coco/annotations/
 comapre/coco/images/
 comapre/coco/code/__pycache__/
 compare/coco/annotations/
 compare/coco/code/__pycache__/
 compare/coco/images/
+compare/score-test/code/__pycache__/
